--- a/src/assets/scss/react/paper-kit/_responsive.scss
+++ b/src/assets/scss/react/paper-kit/_responsive.scss
@@ -21,6 +21,10 @@
     .presentation-subtitle {
       margin-bottom: 100px;
     }
+    .creator {
+        font-weight: normal;
+        font-size: 10px;
+    }
   }
   nav[aria-label="pagination"] {
     justify-content: center;
